Правка каталога Глэйси

--- a/catalog.html
+++ b/catalog.html
@@ -105,7 +105,16 @@
             </label>
             <label>
               Цена: 100 руб. – 500 руб.
-              <div class="range"><input type="range" min="100" max="500"></div>
+              <div class="range">
+                <div class="range-controls">
+                  <div class="scale">
+                  <div class="bar"></div>
+                  <div class="toggle-min"></div>
+                    <div class="toggle-max"></div>
+                    </div>
+                  </div>
+              </div>
+
             </label>
             <fieldset>
               <legend>Жирность:</legend>
@@ -279,10 +288,9 @@
         </ul>
       </div>
       <div class="footer-copyright">
-        <img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy">
-        <p>
-        Сделано в HTML Academy © 2017
-        </p>
+       <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy"></a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><p>Сделано в HTML Academy © 2017
+            </p></a>
       </div>
      </div>
     </footer>
