--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
   		      </ul>
   		    </div>
   		    <div class="footer-copyright">
-  					<img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy">
-  		      <p>Сделано в HTML Academy © 2017
-  		    	</p>
+  					<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy"></a>
+  		      <a href="https://htmlacademy.ru/intensive/htmlcss"><p>Сделано в HTML Academy © 2017
+  		    	</p></a>
   		    </div>
   	    </div>
   	  </footer>
