--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+  <body>
   <div class="wrepper-sliader">
       <header class="header">
         <div class="header-container">
@@ -33,7 +34,7 @@
   			    <ul class="header-button">
   			      <li class="header-button-search">
                 <button class="magnifier"></button>
-                  <form class="header-button-search-form" action="#" method="post"> <input type="text" name="name" placeholder="Что ищем?">
+                  <form class="header-button-search-form" action="#" method="post"> <input type="search" name="search" placeholder="Что ищем?">
   		            </form>
               </li>
   		        <li>
@@ -248,7 +249,7 @@
   		      <input type="text" name="name" placeholder="Как Вас зовут?">
   		      </p>
   		      <p><input type="text" name="mail" placeholder="Ваша почта для ответа?"></p>
-  					<p><textarea rows="5" cols="20" placeholder="Напишите что-нибудь.."></textarea>
+  					<p><textarea rows="5" cols="25" placeholder="Напишите что-нибудь.."></textarea>
   		      </p>
   		      <button type="submit">Отправить</button>
   					<button class="close" type="submit">Закрыть</button>
