--- a/catalog.html
+++ b/catalog.html
@@ -120,7 +120,7 @@
               Жирность:
               <div class="radio">
                 <label>
-                  <input type="radio" name="fatness" value="0">
+                  <input type="radio" name="fatness" value="0" disabled>
                 <span>0%</span>
                 </label>
                 <label>
@@ -147,7 +147,7 @@
                 <label>
                   <input type="checkbox" checked> <span>сахарные присыпки</span></label>
                 <label>
-                  <input type="checkbox"> <span>фрукты</span></label>
+                  <input type="checkbox" disabled> <span>фрукты</span></label>
                 <label>
                   <input type="checkbox"> <span>сиропы</span></label>
                 <label>
