--- a/catalog.html
+++ b/catalog.html
@@ -96,7 +96,7 @@
           <legend class="visually-hidden">Выбираем мороженно</legend>
            <div class="wrepper-choise-1">
             <label>
-              Сортировка:
+              <span class="form-title">Сортировка:</span>
               <div class="popul">
               <select>
                 <option>по популярности</option>
@@ -104,7 +104,7 @@
             </div>
             </label>
             <label>
-              Цена: 100 руб. – 500 руб.
+              <span class="form-title">Цена: 100 руб. – 500 руб.</span>
               <div class="range">
                 <div class="range-controls">
                   <div class="scale">
@@ -117,7 +117,7 @@
 
             </label>
             <fieldset>
-              Жирность:
+              <legend>Жирность:</legend>
               <div class="radio">
                 <label>
                   <input type="radio" name="fatness" value="0" disabled>
