--- a/catalog.html
+++ b/catalog.html
@@ -117,7 +117,7 @@
 
             </label>
             <fieldset>
-              <legend>Жирность:</legend>
+               <span class="form-title">Жирность:</span>
               <div class="radio">
                 <label>
                   <input type="radio" name="fatness" value="0" disabled>
