--- a/index.html
+++ b/index.html
@@ -4,114 +4,113 @@
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
-  <div class="wrepper-sliader">
+    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+    <div class="wrepper-sliader">
       <header class="header">
         <div class="header-container">
           <div class="header-container-1">
-  					<img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси">
-  					<nav class="header-navigation">
-  						<ul class="header-navigation-site">
-  			        <li class="catalog-saite">
-  			          <a href="catalog.html">Каталог</a>
-  								<ul class="header-navigation-list">
-  									<li>Новинки</li>
-  									<li><a href="#">Сливочное</a></li>
-  			            <li><a href="#">Щербеты</a></li>
-  			            <li><a href="#">Фруктовый лед</a></li>
-  			            <li><a href="#">Мелорин</a></li>
-  								</ul>
-  							</li>
-  			        <li><a href="#">Доставка и оплата </a></li>
-  			        <li><a href="#">О Компании </a></li>
-  			      </ul>
-  			    </nav>
-  			  </div>
-  			  <div class="header-container-2">
-  			    <ul class="header-button">
-  			      <li class="header-button-search">
+            <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глэйси">
+            <nav class="header-navigation">
+              <ul class="header-navigation-site">
+                <li class="catalog-saite">
+                  <a href="catalog.html">Каталог</a>
+                  <ul class="header-navigation-list">
+                    <li>Новинки</li>
+                    <li><a href="#">Сливочное</a></li>
+                    <li><a href="#">Щербеты</a></li>
+                    <li><a href="#">Фруктовый лед</a></li>
+                    <li><a href="#">Мелорин</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Доставка и оплата </a></li>
+                <li><a href="#">О Компании </a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="header-container-2">
+            <ul class="header-button">
+              <li class="header-button-search">
                 <button class="magnifier"></button>
-                  <form class="header-button-search-form" action="#" method="post"> <input type="search" name="search" placeholder="Что ищем?">
-  		            </form>
-              </li>
-  		        <li>
-                <button class="header-button-input">
-  		            Вход
-  		          </button>
-                <form class="header-input-form" action="#" method="post">
-									<p><input type="text" name="name" placeholder="Электронная почта">
-									</p>
-			          	<p><input type="text" name="passead" placeholder="Пароль"></p>
-									<div class="blok-2">
-					          <p>
-					            <button class="form-button-input" type="submit">Войти</button>
-					          </p>
-				            <div class="blok-1">
-					            <a href="#">Забыли пароль?</a>
-					            <a href="#">Новая регистрация</a>
-					         	</div>
-				        	</div>
-				        </form>
-
-  			      </li>
-  						<li>
-  			        <button class="header-button-basket">Пусто</button>
-  			      </li>
-  			    </ul>
-  			  </div>
+                <form class="header-button-search-form" action="#" method="post"> <input type="search" name="search" placeholder="Что ищем?">
+              </form>
+            </li>
+            <li>
+              <button class="header-button-input">
+              Вход
+              </button>
+              <form class="header-input-form" action="#" method="post">
+                <p><input type="text" name="name" placeholder="Электронная почта">
+              </p>
+              <p><input type="text" name="passead" placeholder="Пароль"></p>
+              <div class="blok-2">
+                <p>
+                  <button class="form-button-input" type="submit">Войти</button>
+                </p>
+                <div class="blok-1">
+                  <a href="#">Забыли пароль?</a>
+                  <a href="#">Новая регистрация</a>
+                </div>
+              </div>
+            </form>
+          </li>
+          <li>
+            <button class="header-button-basket">Пусто</button>
+          </li>
+        </ul>
       </div>
-    </header>
-    <main>
-       <div class="main-timework">
-        <p class="timework-time">с 10 до 20,ежедневно</p>
-        <p class="timework-tell">8 812 450-25-25</p>
+    </div>
+  </header>
+  <main>
+    <div class="main-timework">
+      <p class="timework-time">с 10 до 20,ежедневно</p>
+      <p class="timework-tell">8 812 450-25-25</p>
+    </div>
+    <section class="slider">
+      <div class="slider-controls">
+        <label for="product-1">Первый</label>
+        <label for="product-2">Второй</label>
+        <label for="product-3">Третий</label>
       </div>
-      <section class="slider">
-        <div class="slider-controls">
-            <label for="product-1">Первый</label>
-            <label for="product-2">Второй</label>
-            <label for="product-3">Третий</label>
-        </div>
-         <ul class="slider-list">
-            <li class="slider-item slide" id="slide1">
-              <h3 class="slide-title">
-                Крем-брюле и пломбир с малиновым джемом
-              </h3>
-              <a class="button slide-button" href="#">Давайте оба!</a>
-            </li>
-            <li class="slider-item slide" id="slide2">
-              <h3 class="slide-title">
-                Шоколадный пломбир и лимонный сорбет
-              </h3>
-              <a class="button slide-button" href="#">Давайте оба!</a>
-            </li>
-            <li class="slider-item slide" id="slide3">
-              <h3 class="slide-title">
-                Пломбир с помадкой и клубничный щербет
-              </h3>
-              <a class="button slide-button" href="#">Давайте оба!</a>
-            </li>
-          </ul>
-        </section>
-         <section class="bonus">
-        <div class="bonus-1">
-          <h2>Малинка даром!</h2>
-          <p>При покупке 2 кг любого фруктового мороженого, добавим<br> в ваш заказ банку малинового варенья бесплатно.</p>
-          <a href="#">Хочу варенье!</a>
-        </div>
-        <div class="bonus-2">
-          <h2>Шоколадки даром!</h2>
-          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку<br> вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="want" href="#">Хочу шоколадки!</a>
-        </div>
-       </section>
-        <div class="heath-wrepper">
+      <ul class="slider-list">
+        <li class="slider-item slide" id="slide1">
+          <h3 class="slide-title">
+          Крем-брюле и пломбир с малиновым джемом
+          </h3>
+          <a class="button slide-button" href="#">Давайте оба!</a>
+        </li>
+        <li class="slider-item slide" id="slide2">
+          <h3 class="slide-title">
+          Шоколадный пломбир и лимонный сорбет
+          </h3>
+          <a class="button slide-button" href="#">Давайте оба!</a>
+        </li>
+        <li class="slider-item slide" id="slide3">
+          <h3 class="slide-title">
+          Пломбир с помадкой и клубничный щербет
+          </h3>
+          <a class="button slide-button" href="#">Давайте оба!</a>
+        </li>
+      </ul>
+    </section>
+    <section class="bonus">
+      <div class="bonus-1">
+        <h2>Малинка даром!</h2>
+        <p>При покупке 2кг любого фруктового мороженого,добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <a href="#">Хочу варенье!</a>
+      </div>
+      <div class="bonus-2">
+        <h2>Шоколадки даром!</h2>
+        <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <a href="#">Хочу шоколадки!</a>
+      </div>
+    </section>
+    <div class="heath-wrepper">
       <section class="main-heath">
         <ul class="heath">
           <li>
@@ -141,120 +140,111 @@
         </ul>
       </section>
     </div>
-
     <div class="wrepper">
-    	<section class="activities">
-
-      	<div class="activities-container">
-        	<h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-        	<div class="activities-container-wrepper">
-    	    <div class="activities-container-wrepper-1">
-    		    <div class="activities-item">
-    		      <img src="img/logo-cream.png" width="49" height="49" alt="Мороженнко">
-    		      <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
-    		      </p>
-    		    </div>
-    		    <div class="activities-item">
-    		      <img src="img/logo-leaf.png" width="49" height="49" alt="Листик">
-    		      <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
-    		      </p>
-    	      </div>
-          </div>
+      <section class="activities">
+        <div class="activities-container">
+          <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+          <div class="activities-container-wrepper">
+            <div class="activities-container-wrepper-1">
+              <div class="activities-item">
+                <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+                </p>
+              </div>
+              <div class="activities-item">
+                <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+                </p>
+              </div>
+            </div>
             <div class="activities-container-wrepper-2">
-    		      <div class="activities-item-3">
-    			      <img src="img/logo-cow.png" width="49" height="49" alt="Корвка">
-    			      <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
-    			      </p>
-    		      </div>
-    		      <div class="activities-item-3">
-    			      <img src="img/logo-thermometer.png" width="49" height="49" alt="Градусник">
-    			      <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
-    			      </p>
-    	      	</div>
-          	</div>
-        	</div>
-      	</div>
+              <div class="activities-item-3">
+                <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+                </p>
+              </div>
+              <div class="activities-item-3">
+                <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
-        <div class="wrapper-news">
-    		  <div class="newsblock">
-    		    <p>Новое в нашем блоге</p>
-    		    <a href="#"><h2>10 способов сервировки <br>фруктовых щербетов<br> к столу</h2></a>
-    		  </div>
-    			<div class="newsletter">
-        	<div class="newsletter-wrapper">
-    				<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
-        		</p>
-    		    <form class="newsletter-form" action="#">
-    		      <input type="text" name="mail" placeholder="Электронная почта">
-    		      <button type="submit">Отправить</button>
-    		    </form>
-      		</div>
-  			</div>
-  		</div>
-  	</div>
+      <div class="wrapper-news">
+        <div class="newsblock">
+          <p>Новое в нашем блоге</p>
+          <a href="#"><h2>10 способов сервировки фруктовых щербетов к столу</h2></a>
+        </div>
+        <div class="newsletter">
+          <div class="newsletter-wrapper">
+            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+            </p>
+            <form class="newsletter-form" action="#">
+              <input type="text" name="mail" placeholder="Электронная почта">
+              <button type="submit">Отправить</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id="map">
       <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abcbd2b1ab0a132b1d3510209f07b9cf0f15bc3f9d20354468c7899693640295a&amp;width=100%25&amp;height=440&amp;lang=ru_UA&amp;scroll=true"></script>
-
       <div class="address">
-        <p>Адрес главного офиса<br>
+        <p class="address-texte">Адрес главного офиса
         и офлайн-магазина:</p>
         <h2>ул.Большая  Конюшенная 19/8,Санкт-Петербург</h2>
-        <p>Для заказов по телефону:</p>
-        <p class="tell">8 812 450-25-25<br>
-        <span class="time">(с 10 до 20 ежедневно)</span></p>
-       <button class="address-button" type="submit">Форма обратной связи</button>
-
+        <p class="till-texte">Для заказов по телефону:</p>
+        <p class="tell">8 812 450-25-25</p>
+        <p class="time">(с 10 до 20 ежедневно)</p>
+        <button class="address-button" type="submit">Форма обратной связи</button>
       </div>
     </div>
   </main>
-  	  <footer class="footer">
-  	    <div class="wrapper-footer">
-  				<div class="footer-social">
-  		      <ul>
-  		        <li>
-  		          <a class="social-button" href="#"><img src="img/logo-tw.png" width="32" height="32" alt="Твиттер"></a>
-  		        </li>
-  		        <li>
-  		          <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм"></a>
-  		        </li>
-  		        <li>
-  		          <a class="social-button" href="#"><img src="img/logo-f.png" width="32" height="32" alt="Фейсбук"></a>
-  		        </li>
-  		        <li>
-  		          <a class="social-button" href="#"><img src="img/logo-vk.png" width="32" height="32" alt="В контакте"></a>
-  		        </li>
-  		     	</ul>
-  	    	</div>
-  		    <div class="footer-documentation">
-  		      <ul>
-  		        <li><a href="#">Для поставщиков</a></li>
-			        <li><a href="#">О производств</a></li>
-		          <li><a href="#">Наши документы</a></li>
-			        <li><a href="#">Экологические стандарты</a></li>
-  		      </ul>
-  		    </div>
-  		    <div class="footer-copyright">
-  					<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy"></a>
-  		      <a href="https://htmlacademy.ru/intensive/htmlcss"><p>Сделано в HTML Academy © 2017
-  		    	</p></a>
-  		    </div>
-  	    </div>
-  	  </footer>
+  <footer class="footer">
+    <div class="wrapper-footer">
+      <div class="footer-social">
+        <ul>
+          <li>
+            <a class="social-button" href="#"><img src="img/logo-tw.png" width="32" height="32" alt="Твиттер"></a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм"></a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><img src="img/logo-f.png" width="32" height="32" alt="Фейсбук"></a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><img src="img/logo-vk.png" width="32" height="32" alt="В контакте"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-documentation">
+        <ul>
+          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#">О производств</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <a  href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><p>Сделано в HTML Academy © 2017
+        </p></a>
+      </div>
     </div>
-  		  <div class="popup">
-  				<form class="popup-form" action="#" method="post">
-  		      <h2>Мы обязателно Вам ответим!</h2>
-  		      <p>
-  		      <input type="text" name="name" placeholder="Как Вас зовут?">
-  		      </p>
-  		      <p><input type="text" name="mail" placeholder="Ваша почта для ответа?"></p>
-  					<p><textarea rows="5" cols="25" placeholder="Напишите что-нибудь.."></textarea>
-  		      </p>
-  		      <button type="submit">Отправить</button>
-  					<button class="close" type="submit">Закрыть</button>
-  		    </form>
-  			</div>
-        <script src="js/script.js"></script>
-  		</body>
-  	</html>
-
+  </footer>
+</div>
+<div class="popup">
+  <form class="popup-form" action="#" method="post">
+    <h2>Мы обязателно Вам ответим!</h2>
+    <p>
+      <input type="text" name="name" placeholder="Как Вас зовут?">
+    </p>
+    <p><input type="text" name="mail" placeholder="Ваша почта для ответа?"></p>
+    <p><textarea rows="5" cols="25" placeholder="Напишите что-нибудь.."></textarea>
+    </p>
+    <button type="submit">Отправить</button>
+    <button class="close" type="submit">Закрыть</button>
+  </form>
+</div>
+<script src="js/script.js"></script>
+</body>
+</html>
